--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,26 @@
 #right-side {
-  grid-column: 3;
+  grid-column: 2;
+  display: flex;
+  justify-content: center;
   /* background-color: darkcyan; */
 }
 
 #left-side {
-  grid-column: 2;
+  grid-column: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: start;
   padding-top: 10px;
   gap: 10px;
+}
+
+#doc {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 637.5px;
+  height: 825px;
+  background-color: white;
+  -webkit-box-shadow: 0px 2px 5px 1px rgba(0,0,0,0.4); 
+  box-shadow: 0px 2px 5px 1px rgba(0,0,0,0.4);
 }
