--- a/src/Boxes/Card.css
+++ b/src/Boxes/Card.css
@@ -2,11 +2,13 @@
   border: 1px solid grey;
   border-radius: 10px;
   padding: 15px;
-  min-width: fit-content;
-  width: 80%;
   height: fit-content;
   background-color: white;
-
+  -webkit-box-shadow: 0px 5px 15px 5px rgba(0,0,0,0.4); 
+  box-shadow: 0px 1px 5px 0.5px rgba(0,0,0,0.4);
+  width: 100%;
+  /* min-width: fit-content; */
+  max-width: 250px;
 }
 
 .title-container {
@@ -23,12 +25,10 @@
   display: block;
 }
 
-
 .doc-options {
   display: flex;
   justify-content: space-around;
   position: sticky;
-
 }
 
 /* buttons at top of document */
