--- a/src/Boxes/Form.css
+++ b/src/Boxes/Form.css
@@ -1,11 +1,11 @@
 .inp-div {
     height: min-content;
     max-width: 250px;
-    width: 20vw;
     min-width: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     margin-top: 20px;
 }
 
@@ -16,9 +16,9 @@
 .title {
     display: flex;
     flex-direction: row;
-    gap: 10px;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
     margin: 0px 5px 0px 5px;
 }
 
@@ -35,4 +35,8 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+input {
+    min-width: 100%;
 }
