--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,9 @@
 }
 
 #root {
-  background-color: whitesmoke;
+  background-color: #F3F4F6;
   display: grid;
-  /* grid-template-columns: 150px minmax(200px, 1fr) 3fr; */
-  grid-template-columns: 0px minmax(200px, 1fr) 3fr;
+  grid-template-columns: minmax(200px, 2fr) 3fr;
   gap: 10px;
   min-height: 100vh;
   min-width: 100vw;
