--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,7 @@
   -webkit-box-shadow: 0px 2px 5px 1px rgba(0,0,0,0.4); 
   box-shadow: 0px 2px 5px 1px rgba(0,0,0,0.4);
 }
+
+.expand-icon {
+  cursor: pointer;
+}
