--- a/src/Boxes/Personal Details/Form.css
+++ b/src/Boxes/Personal Details/Form.css
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    gap: 2px;
 }
 
 * {
@@ -27,6 +28,10 @@
     color: grey;
 }
 
+.title > h3 {
+    font-size: 16px;
+}
+
 #form {
     align-items: center;  
 }
@@ -38,5 +43,9 @@ input::-webkit-inner-spin-button {
 }
 
 input {
+    background-color: #EFF1F2;
     min-width: 100%;
+    border: 1px solid grey;
+    border-radius: 10px;
+    padding: 5px;
 }
