--- a/src/Boxes/Education/education.css
+++ b/src/Boxes/Education/education.css
@@ -1,3 +1,90 @@
 .hidden {
+    /* transition:all 1s ease; This is not needed */
     display: none;
+}
+
+#education-list:first-child {
+    margin-top: 10px;
+}
+
+.education-item-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+}
+
+#new-education-button,
+.education-item-list>button {
+    border-radius: 10px;
+    background-color: white;
+    transition: all 0.5s ease;
+}
+
+.education-item-list>button {
+    padding: 3px 5px;
+    border: 3px solid #EEF0F4;
+}
+
+#new-education-button {
+    padding: 10px 10px;
+    border: 5px solid #EEF0F4;
+}
+
+button {
+    font-weight: 500;
+    cursor: pointer;
+}
+
+#new-education-button:hover {
+    scale: 1.05;
+    background-color: #187FF5;
+    color: white;
+}
+
+.education-item-list>button:hover {
+    scale: 1.1;
+    color: white;
+    background-color: #7E94A1;
+    border-color: #7E94A1;
+}
+
+#education-button-div {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 10px;
+}
+
+#education-button-div > button {
+    width: 80px;
+    padding: 10px 5px;
+    border-radius: 10px;
+    border: 3px solid #EEF0F4;
+    background-color: white;
+    transition: all 0.5s ease;
+}
+
+#delete-education:hover,
+#submit-education:hover,
+#cancel-education:hover {
+    scale: 1.05;
+}
+
+#submit-education {
+    grid-column: 2/3;
+}
+
+#delete-education:hover {
+    background-color: red;
+    color: white;
+}
+
+#submit-education:hover {
+    background-color: #187FF5;
+    color: white;
+}
+
+#cancel-education:hover {
+    background-color: #7E94A1;
+    color: white;
 }
