--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -4,9 +4,9 @@
 
 #root {
   background-color: #F3F4F6;
-  display: grid;
-  grid-template-columns: minmax(200px, 2fr) 3fr;
-  gap: 10px;
+  display: flex;
+  gap: 100px;
+  justify-content: center;
   min-height: 100vh;
   min-width: 100vw;
 }
