fix: fix width of pdf
This fixes the width of the downloadable PDF so that it more accurately is aligned with the standard paper (A4) width and height.

Changes Needed:
- width seems to be off by about 1px, but inches are being used to calculate the height and width of the paper.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,6 +6,7 @@
 }
 
 #left-side {
+  justify-self: end;
   grid-column: 1;
   display: flex;
   flex-direction: column;
@@ -13,6 +14,7 @@
   justify-content: start;
   padding-top: 10px;
   gap: 10px;
+  z-index: 1;
 }
 
 #doc {
@@ -22,10 +24,11 @@
   flex-direction: column;
   gap: 10px;
   align-items: center;
-  width: 637.5px;
-  height: 825px;
+  width: 8.3in;
+  height: 11.7in;
   background-color: white;
   -webkit-box-shadow: 0px 2px 5px 1px rgba(0,0,0,0.4); 
+  z-index: 0;
   box-shadow: 0px 2px 5px 1px rgba(0,0,0,0.4);
 }
 
