--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,13 @@
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  position: relative;
 }
 
 #root {
   background-color: #F3F4F6;
-  display: flex;
-  gap: 100px;
-  justify-content: center;
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-columns: 1fr 3fr;
   min-height: 100vh;
   min-width: 100vw;
 }
