feat: add mobile layout and CSS

--- a/src/styles/ExperienceSection.css
+++ b/src/styles/ExperienceSection.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     margin-top: 10px;
     gap: 10px;
+    font-size: 1rem;
 }
 
 .banner {
@@ -23,5 +24,43 @@
     margin-left: 50px;
     gap: 10px;
     font-size: 15px;
+    margin-bottom: 10px;
+}
+
+@media (max-width: 768px) {
+  .experience-item {
+    grid-template-columns: 1fr;
+    margin-left: 0;
+  }
+
+ .banner {
+    font-size: 1rem;
+  }
+}
+
+.section {
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.banner {
+    text-align: center;
+    color: #0e374e;
+    width: 90%;
+    align-self: center;
+    background-color: #eff1f2;
+    padding: 5px 0px;
+    font-weight: 600;
+    font-size: 1.125rem; 
+}
+
+.experience-item {
+    display: grid;
+    grid-template-columns: 150px 1fr;
+    margin-left: 50px;
+    gap: 10px;
+    font-size: 1rem;
     margin-bottom: 10px;
 }
