--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,7 +2,6 @@
   grid-column: 2;
   display: flex;
   justify-content: center;
-  /* background-color: darkcyan; */
 }
 
 #left-side {
@@ -32,17 +31,23 @@
   box-shadow: 0px 2px 5px 1px rgba(0,0,0,0.4);
 }
 
-#doc>div{
-  width: 100%;
-}
-
-.expand-icon {
-  cursor: pointer;
-}
-
 #content {
   margin: 0px 10px;
   display: flex;
   flex-direction: column;
 }
 
+@media (max-width: 768px) {
+  #right-side, #left-side {
+    grid-column: 1;
+  }
+
+  #right-side {
+    width: 95vw;
+  }
+  
+  #doc {
+    width: 100%;
+    height: auto;
+  }
+}
