--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -7,7 +7,6 @@
   -webkit-box-shadow: 0px 5px 15px 5px rgba(0,0,0,0.4); 
   box-shadow: 0px 1px 5px 0.5px rgba(0,0,0,0.4);
   width: 100%;
-  /* min-width: fit-content; */
   max-width: 250px;
 }
 
@@ -16,6 +15,7 @@
   align-items: center;
   justify-content: space-between;
 }
+
 .card-title {
   cursor: default;
 }
@@ -177,4 +177,10 @@ button {
 .cancel-button:hover {
     background-color: #7E94A1;
     color: white;
+}
+
+@media (max-width: 768px) {
+  .card {
+    max-width: 100%;
+  }
 }
