--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -49,3 +49,10 @@ input {
     border-radius: 10px;
     padding: 5px;
 }
+
+@media (max-width: 768px) {
+  .inp-div {
+    max-width: 100%;
+    min-width: unset;
+  }
+}
