--- a/src/styles/TopDocument.css
+++ b/src/styles/TopDocument.css
@@ -7,6 +7,7 @@
     padding-bottom: 15px;
     background-color: #0E374E;
     color: #FFFFFF;
+    width: 100%;
 }
 
 #contact-info {
@@ -22,3 +23,69 @@
     gap: 5px;
 }
 
+svg {
+    top: -2px;
+    position: relative;
+    width: 20px;
+}
+
+@media (max-width: 768px) {
+  #contact-info {
+    gap: 5px;
+  }
+
+  #header {
+    width: 100%;
+    font-size: 0.875rem;
+  }
+
+  /* #contact-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0px;
+  } */
+
+  #contact-info>* {
+    gap: 0px;
+  }
+
+  svg {
+    width: 15px;
+  }
+}
+
+@media (max-width: 480) {
+    #header>* {
+        font-size: 0.3rem;
+    }  
+    .header-info>p {
+        font-size: 0.005rem;
+    }
+    
+}
+
+@media (max-width: 400) {
+    #header>* {
+        font-size: 0.01rem;
+    } 
+} 
+
+#header {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 15px;
+    padding-top: 30px;
+    padding-bottom: 15px;
+    background-color: #0E374E;
+    color: #FFFFFF;
+    font-size: 1rem;
+}
+
+.header-info {
+    font-size: 0.875rem;
+    font-weight: 400;
+    display: flex;
+    gap: 5px;
+}
